          will be removed in Ipopt 3.14.
        - Changed dependencies as used by coinbrew to use new versions (2.1)
          of ThirdParty/HSL and ThirdParty/MUMPS and dropped ThirdParty/Metis.
          The new versions of the HSL and MUMPS build scripts now look
          for a Metis library in the system and should work with both
          Metis 4 and Metis 5.
        - minor fixes to buildsystem

2020-03-11: 3.13.1
        - Added asserts that check whether sparsity pattern of Jacobian
          and Hessian as returned by TNLP are within range w.r.t. number
          of variables and constraints. [#350]
        - TNLPAdapter::ResortBnds now initializes complete output arrays
          with 0.0 before filling in values for non-fixed variables. Use
          new argument clearorig to turn this off. [#352]
        - bring back configure variables ADD_{C,CXX,F}FLAGS
        - added configure option --enable-relocatable to make prefix in
          pkg-config files relative to pcfiledir (assuming that --libdir
          hasn't been set)
        - bring back configall_system.h for build without config header
        - minor fixes to buildsystem

2019-10-19: 3.13.0
        This major release comes with a larger renovation of the build
        system and a changed directory structure (eliminated top directory),
        which is the result of a long and still on-going effort to use
        recent autotools versions for various COIN-OR projects, reduce
        future maintenance efforts, and adapting behaviors of standard
        autotools-based projects.
        As a consequence, a monolithic build of Ipopt, which builds Ipopt
        with all its dependencies in one run of configure and make is no
        longer possible. Dependencies should now be build and installed
        before building Ipopt.
        Additionally, support for some outdated versions of dependencies
        and unmaintained components of Ipopt have been dropped and some