@@ -14,6 +14,8 @@ commit history.
           The new versions of the HSL and MUMPS build scripts now look
           for a Metis library in the system and should work with both
           Metis 4 and Metis 5.
+        - Changed location where Java interface jar gets installed from
+          $libdir to $datadir/java/.
         - minor fixes to buildsystem
 
 2020-03-11: 3.13.1
